--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch file",
+            "name": "Launch",
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${file}"
-        },
-        
-        {
-            "name": "Launch Package",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}"
+            "program": "${workspaceRoot}",
+            "env": {},
+            "args": []
         }
 
     ]
